--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<h1>Hello, World!</h1>
+<!DOCTYPE html>
+<html>
+<link rel="stylesheet" href="index.css"> 
+<head style="background: #2d333b">
+    <title>Hello</title>
+    <h1 style="color: #9da7b3">Hello, World!</h1>
+
+</head>
+
+<body id="body">
+    <h2 style="color: #9da7b3">This is the main content of the webpage</h2>
+	<img src="ryan_farish.jpg" alt="Ryan Farish" style="width:540px;height:405px;">
+</body>
+
