--- a/index.html
+++ b/index.html
@@ -6,9 +6,32 @@
     <h1 style="color: #9da7b3">Hello, World!</h1>
 
 </head>
-
+<script src="index.js"></script>
 <body id="body">
     <h2 style="color: #9da7b3">This is the main content of the webpage</h2>
-	<img src="ryan_farish.jpg" alt="Ryan Farish" style="width:540px;height:405px;">
+    <img src="ryan_farish.jpg" alt="Ryan Farish" style="width:540px;height:405px;">
+
+    <button class="btn" onclick="RandomID();" style="
+    top: 95%;
+    left: 27px;
+    width: 110px;
+    ">RUN</button>
+
+    <button class="btn" onclick="copyText()" id="copyBtn" style="
+    top: 95%;
+    left: 585px;
+    width: 120px;">Copy text</button>
+
+
+    <input class="input" type="text" id="textBox" name="textBox" size="3" readonly  
+    style="
+    top: 95%; 
+    left: 148px; 
+    width: 405px;
+    "/>
+
+
 </body>
+
+
 
