toggle btn text and color

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body id="body" style="background: #2d333b;">
     
     <div class="description">
-    <h2>This is the main content of the webpage</h2>
+    <h2>This is the main content of the webpage. There is a password generator is you scroll down.</h2>
     </div>
     
     <div  class="ryanImg">
@@ -26,7 +26,8 @@
     <button class="btnCopy" onclick="copyText()" id="copyBtn" style="
     top: 95%;
     left: 585px;
-    width: 120px;">Copy text</button>
+    width: 120px;
+    ">Copy text</button>
 
 
     <input class="input" type="text" id="textBox" name="textBox" size="3" readonly/>
